// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag should render a tag with an icon and a label 1`] = `
<div>
  <div
    class="mm-box mm-tag mm-box--display-flex mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-pill mm-box--border-color-border-default mm-box--border-width-1 box--border-style-solid"
    data-testid="tag"
    style="padding: 2px 8px 2px 4px; gap: 4px;"
  >
    <span
      class="mm-box mm-icon mm-icon--size-xs mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-inherit"
      style="mask-image: url('./images/icons/snaps.svg');"
    />
    <p
      class="mm-box mm-text mm-text--body-sm mm-box--color-text-default"
    >
      Snap Name
    </p>
  </div>
</div>
`;

exports[`Tag should render the label inside the tag and match snapshot 1`] = `
<div>
  <div
    class="mm-box mm-tag mm-box--display-flex mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-pill mm-box--border-color-border-default mm-box--border-width-1 box--border-style-solid"
    data-testid="tag"
    style="padding: 2px 8px 2px 4px; gap: 4px;"
  >
    <p
      class="mm-box mm-text mm-text--body-sm mm-box--color-text-default"
    >
      Imported
    </p>
  </div>
</div>
`;
